// Social & Community Module

// --- External References ---
// Ref: UserAccount.userId
// Ref: TeamProfile.teamId

Enum post_visibility {
  Public
  Private
  TeamOnly
}

Enum reaction_entity_type {
  Post
  Comment
}

Enum reaction_type {
  Like
  Love
  Celebrate
}

Enum report_content_type {
  Post
  Comment
  User
}

Enum report_status {
  Pending
  Resolved
  Dismissed
}

Enum moderation_action {
  Suspend
  Ban
  Reactivate
  ContentRemoval
  Warning
}

Table Post {
  postId integer [primary key]
  authorId integer [not null] // ref: > UserAccount.userId
  teamId integer // ref: > TeamProfile.teamId
  content text [not null]
  visibility post_visibility [not null, default: 'Public']
  reactionCount integer [not null, default: 0]
  commentCount integer [not null, default: 0]
  isHidden boolean [not null, default: false]
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table Comment {
  commentId integer [primary key]
  postId integer [not null, ref: > Post.postId]
  authorId integer [not null] // ref: > UserAccount.userId
  content text [not null]
  parentCommentId integer [ref: > Comment.commentId]
  isHidden boolean [not null, default: false]
  createdAt datetime [not null, default: `now()`]
  updatedAt datetime [not null]
}

Table Reaction {
  reactionId integer [primary key]
  entityType reaction_entity_type [not null]
  entityId integer [not null]
  userId integer [not null] // ref: > UserAccount.userId
  type reaction_type [not null]
  createdAt datetime [not null, default: `now()`]

  indexes {
    (entityType, entityId, userId) [unique]
  }
}

Table Report {
  reportId integer [primary key]
  reporterId integer [not null] // ref: > UserAccount.userId
  reportedUserId integer // ref: > UserAccount.userId
  contentId integer
  contentType report_content_type [not null]
  reason varchar(255) [not null]
  details text
  status report_status [not null, default: 'Pending']
  createdAt datetime [not null, default: `now()`]
  resolvedAt datetime
}

Table ModerationLog {
  logId integer [primary key]
  moderatorId integer [not null] // ref: > UserAccount.userId
  targetUserId integer [not null] // ref: > UserAccount.userId
  action moderation_action [not null]
  reason text [not null]
  details text
  createdAt datetime [not null, default: `now()`]
}
